<resources>
    <string name="app_name">QuizApp</string>
    <string name="result">Result</string>
    <string name="trophy">trophy</string>
    <string name="hey_congratulations">Hey, Congratulations!</string>
    <string name="finish">FINISH</string>
    <string name="quiz_image">quiz image</string>
    <string name="questions_amount">0/10</string>
    <string name="answers_sample">answers sample</string>
    <string name="user_name">user name</string>
    <string name="score_sample">Your Score is 0 out of 10</string>
    <string name="quiz_app">Quiz App!</string>
    <string name="welcome">Welcome</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="hint_user_name">e.g. John</string>
    <string name="start">START</string>
</resources>